--- a/src/app/planner/typechart/typechart.component.html
+++ b/src/app/planner/typechart/typechart.component.html
@@ -1,14 +1,13 @@
-<div class="w-full">
-  <table
-    class="overflow-auto border-4 table-fixed bg-slate-100 touch-auto border-slate-400"
-  >
-    <thead class="">
-      <tr class="">
-        <th class="left-0 border-r-4 border-slate-400 bg-cyan-400"></th>
+<div
+  class="flex flex-col max-h-full border-4 w-fit border-slate-400 bg-slate-100"
+>
+  <table class="table-fixed">
+    <thead>
+      <tr class="border-b-2 bg-slate-300 border-slate-400">
         <th
-          class="left-0 border-b-2 bg-slate-300 border-slate-400"
-          *ngFor="let type of types"
-        >
+          class="w-12 border-b-2 border-r-4 border-r-slate-400 border-b-cyan-400 bg-cyan-400"
+        ></th>
+        <th class="w-8" *ngFor="let type of types">
           <img
             class=""
             src="../../../assets/icons/types/{{ type }}.png"
@@ -18,35 +17,43 @@
         </th>
       </tr>
     </thead>
-    <tbody class="">
-      <tr *ngFor="let pokemon of typechart.team" class="">
-        <th
-          class="w-12 border-r-4 cursor-pointer border-r-slate-400 bg-cyan-400 hover:bg-cyan-300"
-          (click)="toggleVisible(pokemon)"
-        >
-          <sprite
-            [pokemon]="pokemon"
-            [class.opacity-60]="pokemon.disabled"
-          ></sprite>
-        </th>
-        <td
-          *ngFor="let type of types"
-          class="text-center border"
-          [ngClass]="typeColor(pokemon.weak[type], pokemon.disabled!)"
-        >
-          {{ pokemon.weak[type] }}
-        </td>
-      </tr>
-    </tbody>
+  </table>
+  <div class="overflow-y-auto scrollbar-hidden">
+    <table class="table-fixed">
+      <tbody class="border-y border-cyan-400">
+        <tr *ngFor="let pokemon of typechart.team" class="">
+          <th
+            class="w-12 border-r-4 cursor-pointer border-r-slate-400 bg-cyan-400 hover:bg-cyan-300"
+            (click)="toggleVisible(pokemon)"
+          >
+            <sprite
+              [pokemon]="pokemon"
+              [class.opacity-60]="pokemon.disabled"
+            ></sprite>
+          </th>
+          <td
+            *ngFor="let type of types"
+            class="w-8 text-center border"
+            [ngClass]="typeColor(pokemon.weak[type], pokemon.disabled!)"
+          >
+            {{ pokemon.weak[type] }}
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <table class="table-fixed">
     <thead class="border-b-4 border-slate-400">
       <tr class="">
-        <th class="left-0 border-r-4 border-slate-400 bg-cyan-400"></th>
         <th
-          class="left-0 border-t-2 bg-slate-300 border-slate-400"
+          class="w-12 border-t-2 border-l border-r-4 border-cyan-400 border-r-slate-400 bg-cyan-400"
+        ></th>
+        <th
+          class="w-8 border-t-2 bg-slate-300 border-slate-400"
           *ngFor="let type of types"
         >
           <img
-            class=""
+            class="w-full"
             src="../../../assets/icons/types/{{ type }}.png"
             onerror="this.src='../../../assets/icons/types/Unknown.png'"
             alt="{{ type }}"
