break sprites back out into own column

--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -43,6 +43,7 @@
       <label for="totalPoints">Total Points</label>
       <input type="number" formControlName="totalPoints" id="totalPoints" />
     </div>
+    <div>Reset</div>
   </div>
   <div class="flex h-[90%]">
     <div class="w-1/4">
