planner ready for browser

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,8 @@
         <div class="flex items-center h-full px-3 hover:bg-slate-200">
           <a routerLink="/draft">Drafts</a>
         </div>
-        <div class="flex items-center h-full px-3">
-          <a class="opacity-50">Planner</a>
+        <div class="flex items-center h-full px-3 hover:bg-slate-200">
+          <a routerLink="/planner">Planner</a>
         </div>
         <div class="flex items-center h-full px-3">
           <a class="opacity-50">Statistics</a>
@@ -32,8 +32,8 @@
         <div class="flex items-center h-full px-3 rounded hover:bg-slate-200">
           <a routerLink="/draft">Drafts</a>
         </div>
-        <div class="flex items-center h-full px-3 rounded">
-          <a class="opacity-50">Planner</a>
+        <div class="flex items-center h-full px-3 rounded hover:bg-slate-200">
+          <a routerLink="/planner">Planner</a>
         </div>
         <div class="flex items-center h-full px-3 rounded">
           <a class="opacity-50">Statistics</a>
