--- a/src/app/planner/summary/summary.component.html
+++ b/src/app/planner/summary/summary.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col h-full border-4 w-fit border-slate-400 bg-cyan-400">
+<div class="flex flex-col h-full border-4 w-fit border-slate-400">
   <table class="table-fixed h-fit">
     <thead class="bg-slate-400">
       <tr>
