update gets to be unauthenticated, update homepage

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -33,6 +33,23 @@
         <h1 class="pb-2 text-xl font-bold">News and Updates</h1>
         <ul class="space-y-3">
           <li>
+            <h2 class="text-lg font-semibold">May 15th, 2024</h2>
+            <h3>
+              Introducing the
+              <a
+                href="https://pokemondraftzone.com/planner"
+                class="text-blue-500"
+                >Draft Planner</a
+              >! You can now plan out your drafts by viewing the details of your
+              team quickly and easily. Swap pokemon to immediately see how your
+              team changes to create the best draft. There are many additional
+              features that I have planned for it in the future, including
+              charts, recommended picks, and custom filters, that will be
+              implemented in the next few weeks. Please let me know of any bug
+              or issues that you experience when using it.
+            </h3>
+          </li>
+          <li>
             <h2 class="text-lg font-semibold">April 1st, 2024</h2>
             <h3>
               Happy April Fools' Day! Significant effort has been invested in
