--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -72,6 +72,17 @@
     </div>
     <button
       class="p-1 border-2 rounded-lg hover:bg-slate-300 bg-slate-100 border-slate-400"
+      routerLink="/draft/new"
+      [queryParams]="{
+        team: team,
+        format: plannerForm.get('format')?.value,
+        ruleset: plannerForm.get('ruleset')?.value
+      }"
+    >
+      Save to New League
+    </button>
+    <button
+      class="p-1 border-2 rounded-lg hover:bg-slate-300 bg-slate-100 border-slate-400"
       (click)="resetForm()"
     >
       Reset
