more small changes to title

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
       >
         <img
           src="../assets/logo.png"
-          class="px-2 text-xl font-semibold"
+          class="mx-2 text-xl font-semibold"
           alt="DraftZone"
           routerLink="/"
         />
