--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,11 +1,16 @@
 <div class="flex flex-col items-center w-full h-full px-6 py-8">
   <div class="flex items-center justify-center w-full mb-6 h-1/4">
+    <h1 class="p-1 text-6xl font-semibold text-red-400 font-nasa w-fit">
+      POKEMON
+    </h1>
     <img
-      class="w-16 h-16 mr-2"
+      class="w-16 h-16 m-1"
       src="../../../assets/logo_small.png"
       alt="logo"
     />
-    <h1 class="text-6xl font-semibold font-nasa w-fit">Pokemon DraftZone</h1>
+    <h1 class="p-1 text-6xl font-semibold text-cyan-400 font-nasa w-fit">
+      DRAFTZONE
+    </h1>
   </div>
   <div class="flex flex-col w-5/6 md:w-2/3 h-2/3">
     <div class="grid w-full grid-cols-1 py-2 gap-y-2 gap-x-4 md:grid-cols-3">
