--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,6 +1,8 @@
 <div class="flex flex-col items-center w-full h-full px-6 py-8">
   <div class="flex items-center justify-center w-full mb-6 h-1/4">
-    <h1 class="p-1 text-6xl font-semibold text-red-400 font-nasa w-fit">
+    <h1
+      class="hidden p-1 text-6xl font-semibold md:block text-deoxys-red font-nasa w-fit"
+    >
       POKEMON
     </h1>
     <img
@@ -8,9 +10,18 @@
       src="../../../assets/logo_small.png"
       alt="logo"
     />
-    <h1 class="p-1 text-6xl font-semibold text-cyan-400 font-nasa w-fit">
-      DRAFTZONE
-    </h1>
+    <div class="">
+      <h1
+        class="p-1 text-4xl font-semibold sm:text-5xl lg:text-6xl md:hidden text-deoxys-red font-nasa w-fit"
+      >
+        POKEMON
+      </h1>
+      <h1
+        class="order-3 p-1 text-4xl font-semibold sm:text-5xl lg:text-6xl text-deoxys-cyan font-nasa w-fit"
+      >
+        DRAFTZONE
+      </h1>
+    </div>
   </div>
   <div class="flex flex-col w-5/6 md:w-2/3 h-2/3">
     <div class="grid w-full grid-cols-1 py-2 gap-y-2 gap-x-4 md:grid-cols-3">
