--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -3,7 +3,7 @@
     <h1
       class="hidden p-1 text-6xl font-semibold md:block text-deoxys-red font-nasa w-fit"
     >
-      POKEMON
+      POKEМON
     </h1>
     <img
       class="w-16 h-16 m-1"
@@ -14,7 +14,7 @@
       <h1
         class="p-1 text-4xl font-semibold sm:text-5xl lg:text-6xl md:hidden text-deoxys-red font-nasa w-fit"
       >
-        POKEMON
+        POKEМON
       </h1>
       <h1
         class="order-3 p-1 text-4xl font-semibold sm:text-5xl lg:text-6xl text-deoxys-cyan font-nasa w-fit"
