--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col items-center w-full h-full px-6 py-8">
-  <div class="flex items-center justify-center w-full mb-6 h-1/4">
+  <div class="flex items-center justify-center w-full mb-6 h-1/6 md:h-1/4">
     <h1
-      class="hidden p-1 text-6xl font-semibold md:block text-deoxys-red font-nasa w-fit"
+      class="hidden p-1 text-5xl font-semibold lg:text-6xl md:block text-deoxys-red font-nasa w-fit"
     >
       POKEМON
     </h1>
@@ -10,20 +10,20 @@
       src="../../../assets/logo_small.png"
       alt="logo"
     />
-    <div class="">
+    <div class="space-y-0">
       <h1
-        class="p-1 text-4xl font-semibold sm:text-5xl lg:text-6xl md:hidden text-deoxys-red font-nasa w-fit"
+        class="px-1 text-4xl font-semibold sm:text-5xl lg:text-6xl md:hidden text-deoxys-red font-nasa w-fit"
       >
         POKEМON
       </h1>
       <h1
-        class="order-3 p-1 text-4xl font-semibold sm:text-5xl lg:text-6xl text-deoxys-cyan font-nasa w-fit"
+        class="order-3 px-1 text-4xl font-semibold sm:text-5xl lg:text-6xl text-deoxys-cyan font-nasa w-fit"
       >
         DRAFTZONE
       </h1>
     </div>
   </div>
-  <div class="flex flex-col w-5/6 md:w-2/3 h-2/3">
+  <div class="flex flex-col w-5/6 md:w-2/3 h-5/6 md:h-3/4">
     <div class="grid w-full grid-cols-1 py-2 gap-y-2 gap-x-4 md:grid-cols-3">
       <strong
         class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-slate-200 hover:cursor-pointer border-slate-400 bg-slate-300"
@@ -47,76 +47,72 @@
       </a>
     </div>
     <div
-      class="w-full h-full px-2 py-4 border shadow rounded-xl bg-slate-300 border-slate-400"
+      class="flex-grow w-full px-2 py-4 overflow-y-auto border shadow h-min-0 rounded-xl bg-slate-300 border-slate-400"
     >
-      <div class="h-full px-2 overflow-y-auto">
-        <h1 class="pb-2 text-xl font-bold">News and Updates</h1>
-        <ul class="space-y-3">
-          <li>
-            <h2 class="text-lg font-semibold">May 15th, 2024</h2>
-            <h3>
-              Introducing the
-              <a
-                href="https://pokemondraftzone.com/planner"
-                class="text-blue-500"
-                >Draft Planner</a
-              >! You can now plan out your drafts by viewing the details of your
-              team quickly and easily. Swap pokemon to immediately see how your
-              team changes to create the best draft. There are many additional
-              features that I have planned for it in the future, including
-              charts, recommended picks, and custom filters, that will be
-              implemented in the next few weeks. Please let me know of any bug
-              or issues that you experience when using it.
-            </h3>
-          </li>
-          <li>
-            <h2 class="text-lg font-semibold">April 1st, 2024</h2>
-            <h3>
-              Happy April Fools' Day! Significant effort has been invested in
-              enhancing stability and addressing bugs on the backend. Now, you
-              have the ability to import Pokémon from your clipboard for new
-              drafts and teams. The draft planner is nearing completion and is
-              scheduled for release in the coming weeks. Thanks everyone for the
-              continued support!
-            </h3>
-          </li>
-          <li>
-            <h2 class="text-lg font-semibold">March 12th, 2024</h2>
-            <h3>
-              Got a couple of updates to share this week. Firstly, the mobile
-              experience should be significantly improved. I've revamped the
-              layouts to ensure nothing gets cut off when using a mobile device.
-              Secondly, there's an update with the speedchart. You can now
-              filter speed by modifiers. Simply look for the icon in the top
-              right corner to adjust the visible speed modifiers as needed.
-            </h3>
-          </li>
-          <li>
-            <h2 class="text-lg font-semibold">March 3rd, 2024</h2>
-            <h3>
-              Thank you everyone for this first round of feedback and bug
-              reporting. While there are still some bugs to be fixed, the major
-              ones have been squashed at this point. I also got the Score button
-              working so you can add the score, replay, pastes, and Pokémon
-              statistics to each match. While there's no way to view kill
-              leaderboards right now, I plan on adding it in the near future.
-              Keep the feedback coming and thanks for a great first weekend!
-            </h3>
-          </li>
-          <li>
-            <h2 class="text-lg font-semibold">February 29th, 2024</h2>
-            <h3>
-              Welcome Pokemon Draftzone! I am thrilled to announce the launch of
-              our beta testing phase! Explore the site, share feedback, and
-              report any bugs you encounter to our
-              <a href="https://discord.gg/sQUEBW4UVx" class="text-blue-500"
-                >Discord</a
-              >. Lets work together to create the ultimate Pokemon Draft
-              experience.
-            </h3>
-          </li>
-        </ul>
-      </div>
+      <h1 class="pb-2 text-xl font-bold">News and Updates</h1>
+      <ul class="space-y-3">
+        <li>
+          <h2 class="text-lg font-semibold">May 15th, 2024</h2>
+          <h3>
+            Introducing the
+            <a href="https://pokemondraftzone.com/planner" class="text-blue-500"
+              >Draft Planner</a
+            >! You can now plan out your drafts by viewing the details of your
+            team quickly and easily. Swap pokemon to immediately see how your
+            team changes to create the best draft. There are many additional
+            features that I have planned for it in the future, including charts,
+            recommended picks, and custom filters, that will be implemented in
+            the next few weeks. Please let me know of any bug or issues that you
+            experience when using it.
+          </h3>
+        </li>
+        <li>
+          <h2 class="text-lg font-semibold">April 1st, 2024</h2>
+          <h3>
+            Happy April Fools' Day! Significant effort has been invested in
+            enhancing stability and addressing bugs on the backend. Now, you
+            have the ability to import Pokémon from your clipboard for new
+            drafts and teams. The draft planner is nearing completion and is
+            scheduled for release in the coming weeks. Thanks everyone for the
+            continued support!
+          </h3>
+        </li>
+        <li>
+          <h2 class="text-lg font-semibold">March 12th, 2024</h2>
+          <h3>
+            Got a couple of updates to share this week. Firstly, the mobile
+            experience should be significantly improved. I've revamped the
+            layouts to ensure nothing gets cut off when using a mobile device.
+            Secondly, there's an update with the speedchart. You can now filter
+            speed by modifiers. Simply look for the icon in the top right corner
+            to adjust the visible speed modifiers as needed.
+          </h3>
+        </li>
+        <li>
+          <h2 class="text-lg font-semibold">March 3rd, 2024</h2>
+          <h3>
+            Thank you everyone for this first round of feedback and bug
+            reporting. While there are still some bugs to be fixed, the major
+            ones have been squashed at this point. I also got the Score button
+            working so you can add the score, replay, pastes, and Pokémon
+            statistics to each match. While there's no way to view kill
+            leaderboards right now, I plan on adding it in the near future. Keep
+            the feedback coming and thanks for a great first weekend!
+          </h3>
+        </li>
+        <li>
+          <h2 class="text-lg font-semibold">February 29th, 2024</h2>
+          <h3>
+            Welcome Pokemon Draftzone! I am thrilled to announce the launch of
+            our beta testing phase! Explore the site, share feedback, and report
+            any bugs you encounter to our
+            <a href="https://discord.gg/sQUEBW4UVx" class="text-blue-500"
+              >Discord</a
+            >. Lets work together to create the ultimate Pokemon Draft
+            experience.
+          </h3>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
