add github links and update news

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -43,7 +43,7 @@
         target="_blank"
         class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-slate-200 hover:cursor-pointer border-slate-400 bg-slate-300"
       >
-        <strong>Keep the site Ad-Free</strong>
+        <strong>Contribute to the project</strong>
       </a>
     </div>
     <div
@@ -52,10 +52,32 @@
       <h1 class="pb-2 text-xl font-bold">News and Updates</h1>
       <ul class="space-y-3">
         <li>
+          <h2 class="text-lg font-semibold">May 25th, 2024</h2>
+          <h3>
+            The project is now fully open source! You can explore and access the
+            code for both the
+            <a
+              href="https://github.com/LumarisX/pokemon-draftzone-client"
+              class="font-semibold text-blue-500"
+              >client</a
+            >
+            and the
+            <a
+              href="https://github.com/LumarisX/pokemon-draftzone-server"
+              class="font-semibold text-blue-500"
+              >server</a
+            >. We encourage you to review the code, report any issues you find,
+            and contribute your own ideas and improvements. Join our community
+            of developers and help us enhance the project together!
+          </h3>
+        </li>
+        <li>
           <h2 class="text-lg font-semibold">May 15th, 2024</h2>
           <h3>
             Introducing the
-            <a href="https://pokemondraftzone.com/planner" class="text-blue-500"
+            <a
+              href="https://pokemondraftzone.com/planner"
+              class="font-semibold text-blue-500"
               >Draft Planner</a
             >! You can now plan out your drafts by viewing the details of your
             team quickly and easily. Swap pokemon to immediately see how your
@@ -106,7 +128,9 @@
             Welcome Pokemon Draftzone! I am thrilled to announce the launch of
             our beta testing phase! Explore the site, share feedback, and report
             any bugs you encounter to our
-            <a href="https://discord.gg/sQUEBW4UVx" class="text-blue-500"
+            <a
+              href="https://discord.gg/sQUEBW4UVx"
+              class="font-semibold text-blue-500"
               >Discord</a
             >. Lets work together to create the ultimate Pokemon Draft
             experience.
