Remove spell checks on inputs

--- a/src/app/opponent-overview/opponent-score/opponent-score.component.html
+++ b/src/app/opponent-overview/opponent-score/opponent-score.component.html
@@ -15,6 +15,7 @@
       <p class="font-semibold">Replay</p>
       <input
         formControlName="replay"
+        spellcheck="false"
         class="w-full p-1 mx-1 text-center rounded-full shadow-inner bg-slate-200 text-medium shadow-slate-600"
       />
     </div>
@@ -32,6 +33,7 @@
                 <span>PokePaste</span>
                 <input
                   formControlName="paste"
+                  spellcheck="false"
                   class="w-full p-1 mx-1 text-center rounded-full shadow-inner bg-cyan-200 text-medium shadow-cyan-600"
               /></label>
             </div>
@@ -143,6 +145,7 @@
                 <span>PokePaste</span>
                 <input
                   formControlName="paste"
+                  spellcheck="false"
                   class="w-full p-1 mx-1 text-center bg-red-200 rounded-full shadow-inner text-medium shadow-red-600"
               /></label>
             </div>
