--- a/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
@@ -9,6 +9,7 @@
         <label class="block mb-1 font-bold">League Name</label>
         <input
           formControlName="leagueName"
+          spellcheck="false"
           placeholder="Pokemon Draft League"
           class="w-full px-4 py-2 text-base text-center rounded-full shadow-md bg-cyan-200 focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:bg-cyan-100"
         />
@@ -17,6 +18,7 @@
         <label class="block mb-1 font-bold">Team Name</label>
         <input
           formControlName="teamName"
+          spellcheck="false"
           placeholder="Deimos Deoxys"
           class="w-full px-4 py-2 text-base text-center rounded-full shadow-md bg-cyan-200 focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:bg-cyan-100"
         />
@@ -25,6 +27,7 @@
         <label class="block mb-1 font-bold">Format</label>
         <select
           formControlName="format"
+          spellcheck="false"
           class="w-full px-4 py-2 text-base text-center rounded-full shadow-md bg-cyan-200 focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:bg-cyan-100"
         >
           <option value="" disabled selected>Select Format</option>
@@ -98,6 +101,7 @@
       <div class="flex justify-center w-full">
         <textarea
           #textAreaInfo
+          spellcheck="false"
           class="w-2/3 p-2 rounded resize-none h-96 max-w-128"
           placeholder="Deoxys&#10;Minior&#10;Clefable&#10;..."
         ></textarea>
