--- a/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
@@ -9,6 +9,7 @@
         <label class="block mb-1 font-bold">Team Name</label>
         <input
           formControlName="teamName"
+          spellcheck="false"
           placeholder="Deimos Deoxys"
           class="w-full px-4 py-2 text-base text-center bg-red-200 rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-red-500 focus:bg-red-100"
         />
@@ -17,6 +18,7 @@
         <label class="block mb-1 font-bold">Stage</label>
         <input
           placeholder="Week 1"
+          spellcheck="false"
           formControlName="stage"
           class="w-full px-4 py-2 text-base text-center bg-red-200 rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-red-500 focus:bg-red-100"
         />
@@ -73,7 +75,7 @@
       <div class="flex justify-center w-full">
         <textarea
           #textAreaInfo
-          autocomplete="off"
+          spellcheck="false"
           class="w-2/3 p-2 rounded resize-none h-96 max-w-128"
           placeholder="Deoxys&#10;Minior&#10;Clefable&#10;..."
         ></textarea>
