--- a/src/app/pokemon-form/pokemon-form.component.html
+++ b/src/app/pokemon-form/pokemon-form.component.html
@@ -12,6 +12,7 @@
       <label class="p-1 font-semibold">Name</label>
       <input
         formControlName="name"
+        spellcheck="false"
         class="w-full px-4 py-1 mx-1 rounded-full bg-slate-100text-medium"
         (keyup.enter)="this.addPokemonEvent.emit()"
       />
