--- a/src/app/matchup-overview/matchup/movechart/move-category/move-category.component.html
+++ b/src/app/matchup-overview/matchup/movechart/move-category/move-category.component.html
@@ -1,8 +1,8 @@
 <div
   (click)="show = !show"
-  class="sticky top-0 left-0 z-10 flex w-full text-lg font-bold border-t border-b min-w-96 bg-slate-300 border-slate-400"
+  class="sticky top-0 left-0 z-10 flex w-full text-lg font-bold border-t border-b sm:min-w-96 bg-slate-300 border-slate-400"
 >
-  <div class="flex items-center justify-center flex-grow">
+  <div class="flex items-center justify-center flex-grow text-center">
     {{ category.categoryName }}
   </div>
   <div
@@ -30,13 +30,13 @@
   >
     <div class="flex items-center w-1/3 p-1 border-r border-slate-400">
       <div
-        class="flex justify-center w-full py-1 font-semibold border-2 rounded"
+        class="flex justify-center w-full py-1 font-semibold text-center border-2 rounded"
         [ngClass]="typeBorder(move.type)"
       >
         {{ move.name }}
       </div>
     </div>
-    <div class="flex flex-row flex-wrap w-2/3 px-1">
+    <div class="flex flex-row flex-wrap items-center w-2/3 px-1">
       <sprite
         class="h-8"
         *ngFor="let pokemon of move.pokemon"
