--- a/src/app/matchup-overview/matchup/movechart/movechart.component.html
+++ b/src/app/matchup-overview/matchup/movechart/movechart.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col h-full">
+<div class="flex flex-col w-full h-full">
   <div class="flex w-full px-1 bg-slate-400 rounded-t-xl">
     <div class="flex w-full pb-1 border-b border-slate-300">
       <h1 class="w-full text-xl font-bold text-center">Learned Moves</h1>
