Add date-time picker for scheduling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -95,14 +95,7 @@
     <router-outlet></router-outlet>
   </main>
   <footer class="z-10 flex w-full border-t-2 bg-slate-300 border-slate-400">
-    <div class="flex items-center w-1/2">
-      <!-- <a href="https://www.buymeacoffee.com/xlumarisxu" class="mx-2 w-fit">
-        <div class="hidden text-xs sm:block">
-          Support the creator and keep the site ad-free
-        </div>
-        <div class="block text-sm sm:hidden">Donate</div>
-      </a> -->
-    </div>
+    <div class="w-1/2"></div>
     <div class="flex justify-end w-1/2 mx-5 my-1 space-x-3">
       <a
         href="https://github.com/LumarisX/pokemon-draftzone-client"
