--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -64,7 +64,7 @@
                 >View Matchup</a
               >
               <div
-                class="grid items-center justify-center w-1/3 grid-cols-3 px-2"
+                class="grid items-center justify-center w-1/3 grid-cols-4 px-2"
               >
                 <img
                   class="w-8 h-8 p-1 bg-red-300 shadow hover:shadow rounded-xl hover:cursor-pointer shadow-red-600"
@@ -73,6 +73,12 @@
                   title="Score"
                   src="../../../assets/icons/score.svg"
                   alt="Score"
+                />
+                <img
+                  class="w-8 h-8 p-1 bg-red-300 shadow opacity-50 rounded-xl shadow-red-600"
+                  src="../../../assets/icons/clock.svg"
+                  title="Schedule"
+                  alt="Schedule"
                 />
                 <img
                   class="w-8 h-8 p-1 bg-red-300 shadow hover:shadow rounded-xl hover:cursor-pointer shadow-red-600"
