--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -39,7 +39,7 @@
         <strong> Join our community</strong>
       </a>
       <a
-        href="https://www.buymeacoffee.com/xlumarisxu"
+        href="https://github.com/LumarisX/pokemon-draftzone-client"
         target="_blank"
         class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-slate-200 hover:cursor-pointer border-slate-400 bg-slate-300"
       >
