More schedule additons for timezones

--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -76,6 +76,8 @@
                 />
                 <img
                   class="w-8 h-8 p-1 bg-red-300 shadow opacity-50 rounded-xl shadow-red-600"
+                  [routerLink]="'schedule'"
+                  [queryParams]="{ matchup: matchup._id | json }"
                   src="../../../assets/icons/clock.svg"
                   title="Schedule"
                   alt="Schedule"
