--- a/src/app/opponent-overview/opponent-schedule/opponent-schedule.component.html
+++ b/src/app/opponent-overview/opponent-schedule/opponent-schedule.component.html
@@ -26,10 +26,13 @@
         [(ngModel)]="selectedTimeZone"
         (change)="updateTimes()"
         size="5"
-        class="absolute z-10 block w-full p-2 mt-1 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+        class="z-10 block w-full p-2 mt-1 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
       >
-        <option *ngFor="let tz of filteredTimeZones" [value]="tz">
-          {{ tz }}
+        <option *ngFor="let tz of filteredTimeZones" [value]="tz.name">
+          {{ tz.offset + " (" + tz.name + ")" }}
+        </option>
+        <option *ngIf="filteredTimeZones.length === 0" disabled>
+          No matches found
         </option>
       </select>
     </div>
