--- a/src/app/opponent-overview/opponent-schedule/opponent-schedule.component.html
+++ b/src/app/opponent-overview/opponent-schedule/opponent-schedule.component.html
@@ -1,60 +1,103 @@
 <div class="container p-4 mx-auto">
-  <div class="flex flex-col items-center space-y-4">
-    <div class="w-full max-w-md">
-      <label class="block text-sm font-medium text-gray-700"
-        >Select Date and Time</label
-      >
-      <input
-        type="datetime-local"
-        [(ngModel)]="selectedDateTime"
-        (change)="updateTimes()"
-        step="300"
-        class="block w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
-      />
+  <div class="grid grid-cols-3 gap-4">
+    <div class="flex flex-col h-full p-1 rounded-lg bg-cyan-200">
+      <div class="w-full">
+        <label class="text-sm font-medium text-gray-700">Local Time Zone</label>
+        <input
+          type="text"
+          readonly
+          [value]="localTimeOffset + ' (' + localTimeZone + ')'"
+          class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+        />
+      </div>
+      <div class="flex-grow"></div>
+      <div class="w-full">
+        <label class="text-sm font-medium text-gray-700">Local Time</label>
+        <input
+          type="text"
+          [value]="localTime"
+          readonly
+          class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+        />
+      </div>
     </div>
-    <div class="relative w-full max-w-md">
-      <label class="block text-sm font-medium text-gray-700"
-        >Search Time Zone</label
-      >
-      <input
-        type="text"
-        placeholder="Search time zones..."
-        (input)="filterTimeZones($event)"
-        class="block w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
-      />
-      <select
-        [(ngModel)]="selectedTimeZone"
-        (change)="updateTimes()"
-        size="5"
-        class="z-10 block w-full p-2 mt-1 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
-      >
-        <option *ngFor="let tz of filteredTimeZones" [value]="tz.name">
-          {{ tz.offset + " (" + tz.name + ")" }}
-        </option>
-        <option *ngIf="filteredTimeZones.length === 0" disabled>
-          No matches found
-        </option>
-      </select>
+    <div class="p-1">
+      <div class="w-full">
+        <label class="text-sm font-medium text-gray-700">Select Date</label>
+        <input
+          type="date"
+          [(ngModel)]="selectedDate"
+          (change)="updateTimes()"
+          class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+        />
+      </div>
+      <div class="w-full">
+        <label class="text-sm font-medium text-gray-700">Select Time</label>
+        <input
+          type="time"
+          [(ngModel)]="selectedTime"
+          (change)="updateTimes()"
+          step="300"
+          class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+        />
+      </div>
+      <div class="w-full">
+        <label class="text-sm font-medium text-gray-700">Time Difference</label>
+        <input
+          type="text"
+          [value]="timeDifference"
+          readonly
+          class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+        />
+      </div>
+      <div class="flex items-center mt-2">
+        <input
+          type="checkbox"
+          id="emailReminder"
+          [(ngModel)]="emailReminder"
+          class="mr-2"
+        />
+        <label for="emailReminder" class="text-sm font-medium text-gray-700"
+          >Email me a reminder</label
+        >
+      </div>
     </div>
-    <div class="w-full max-w-md">
-      <label class="block text-sm font-medium text-gray-700">Local Time</label>
-      <input
-        type="text"
-        [value]="localTime"
-        readonly
-        class="block w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
-      />
-    </div>
-    <div class="w-full max-w-md">
-      <label class="block text-sm font-medium text-gray-700"
-        >Converted Time</label
-      >
-      <input
-        type="text"
-        [value]="convertedTime"
-        readonly
-        class="block w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
-      />
+    <div class="p-1 bg-red-200 rounded-lg">
+      <div class="w-full">
+        <label class="text-sm font-medium text-gray-700"
+          >Search Time Zone</label
+        >
+        <div class="mt-1">
+          <input
+            type="text"
+            placeholder="Search time zones..."
+            (input)="filterTimeZones($event)"
+            class="w-full p-2 border border-gray-300 shadow-sm rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+          />
+          <select
+            [(ngModel)]="opponentTimeZone"
+            (change)="updateTimes()"
+            size="5"
+            class="w-full p-2 bg-white border border-gray-300 shadow-sm rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+          >
+            <option *ngFor="let tz of filteredTimeZones" [value]="tz.name">
+              {{ tz.offset + " (" + tz.name + ")" }}
+            </option>
+            <option *ngIf="filteredTimeZones.length === 0" disabled>
+              No matches found
+            </option>
+          </select>
+        </div>
+      </div>
+      <div class="w-full">
+        <label class="text-sm font-medium text-gray-700">Converted Time</label>
+        <input
+          type="text"
+          [value]="convertedTime"
+          readonly
+          class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+        />
+      </div>
     </div>
   </div>
 </div>
