Scheduler time convert working, not saving yet

--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -75,7 +75,7 @@
                   alt="Score"
                 />
                 <img
-                  class="w-8 h-8 p-1 bg-red-300 shadow opacity-50 rounded-xl shadow-red-600"
+                  class="w-8 h-8 p-1 bg-red-300 shadow hover:shadow rounded-xl hover:cursor-pointer shadow-red-600"
                   [routerLink]="'schedule'"
                   [queryParams]="{ matchup: matchup._id | json }"
                   src="../../../assets/icons/clock.svg"
