--- a/src/app/opponent-overview/opponent-schedule/opponent-schedule.component.html
+++ b/src/app/opponent-overview/opponent-schedule/opponent-schedule.component.html
@@ -1,6 +1,8 @@
 <div class="container p-4 mx-auto">
-  <div class="grid grid-cols-3 gap-4">
-    <div class="flex flex-col h-full p-1 rounded-lg bg-cyan-200">
+  <div class="grid grid-cols-1 gap-4 md:grid-cols-3">
+    <div
+      class="flex flex-col order-2 h-full p-1 rounded-lg md:order-1 bg-cyan-200"
+    >
       <div class="w-full">
         <label class="text-sm font-medium text-gray-700">Local Time Zone</label>
         <input
@@ -12,35 +14,26 @@
       </div>
       <div class="flex-grow"></div>
       <div class="w-full">
-        <label class="text-sm font-medium text-gray-700">Local Time</label>
-        <input
-          type="text"
-          [value]="localTime"
-          readonly
-          class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
-        />
-      </div>
-    </div>
-    <div class="p-1">
-      <div class="w-full">
-        <label class="text-sm font-medium text-gray-700">Select Date</label>
+        <label class="text-sm font-medium text-gray-700">Local Date</label>
         <input
           type="date"
           [(ngModel)]="selectedDate"
-          (change)="updateTimes()"
+          (change)="updateTimes('local')"
           class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
         />
       </div>
       <div class="w-full">
-        <label class="text-sm font-medium text-gray-700">Select Time</label>
+        <label class="text-sm font-medium text-gray-700">Local Time</label>
         <input
           type="time"
           [(ngModel)]="selectedTime"
-          (change)="updateTimes()"
+          (change)="updateTimes('local')"
           step="300"
           class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
         />
       </div>
+    </div>
+    <div class="order-1 p-1 md:order-2">
       <div class="w-full">
         <label class="text-sm font-medium text-gray-700">Time Difference</label>
         <input
@@ -50,22 +43,34 @@
           class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
         />
       </div>
-      <div class="flex items-center mt-2">
+      <!-- <div class="flex items-center mt-2">
         <input
           type="checkbox"
           id="emailReminder"
           [(ngModel)]="emailReminder"
           class="mr-2"
         />
-        <label for="emailReminder" class="text-sm font-medium text-gray-700"
-          >Email me a reminder</label
-        >
-      </div>
+        <div *ngIf="!emailReminder" class="text-sm font-medium text-gray-700">
+          Email a reminder
+        </div>
+        <div *ngIf="emailReminder" class="text-sm font-medium text-gray-700">
+          Email a reminder
+          <input
+            class="w-8 border"
+            min="0"
+            max="48"
+            type="number"
+            [(ngModel)]="emailTime"
+          />
+          {{ emailTime === 1 ? "hour" : "hours" }}
+          before
+        </div>
+      </div> -->
     </div>
-    <div class="p-1 bg-red-200 rounded-lg">
+    <div class="order-3 p-1 bg-red-200 rounded-lg">
       <div class="w-full">
         <label class="text-sm font-medium text-gray-700"
-          >Search Time Zone</label
+          >Opponent Time Zone</label
         >
         <div class="mt-1">
           <input
@@ -76,7 +81,7 @@
           />
           <select
             [(ngModel)]="opponentTimeZone"
-            (change)="updateTimes()"
+            (change)="updateTimes('local')"
             size="5"
             class="w-full p-2 bg-white border border-gray-300 shadow-sm rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
           >
@@ -90,14 +95,39 @@
         </div>
       </div>
       <div class="w-full">
+        <label class="text-sm font-medium text-gray-700">Converted Date</label>
+        <input
+          type="date"
+          [(ngModel)]="convertedDate"
+          (change)="updateTimes('converted')"
+          class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+        />
+      </div>
+      <div class="w-full">
         <label class="text-sm font-medium text-gray-700">Converted Time</label>
         <input
-          type="text"
-          [value]="convertedTime"
-          readonly
+          type="time"
+          [(ngModel)]="convertedTime"
+          (change)="updateTimes('converted')"
+          step="300"
           class="w-full p-2 mt-1 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
         />
       </div>
     </div>
+  </div>
+  <div class="flex justify-between mt-4">
+    <button
+      [routerLink]="'/draft/' + teamId"
+      type="button"
+      class="px-4 py-2 font-medium text-white bg-gray-500 rounded-md shadow-sm hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-gray-500"
+    >
+      Cancel
+    </button>
+    <!-- <button
+      type="button"
+      class="px-4 py-2 font-medium text-white bg-indigo-600 rounded-md shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-indigo-500"
+    >
+      Save
+    </button> -->
   </div>
 </div>
