--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -64,9 +64,9 @@
           accurately.
         </li>
         <li>
-          <strong>Scheduled Playing Time (Coming Soon): </strong> Set designated
-          match times, convert times across timezones, and receive reminders to
-          ensure timely and organized gameplay. Never miss a match again with
+          <strong>Scheduled Playing Time (Beta): </strong> Set designated match
+          times, convert times across timezones, and receive reminders to ensure
+          timely and organized gameplay. Never miss a match again with
           DraftZone's convenient scheduling tools.
         </li>
       </ul>
