--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -52,6 +52,20 @@
       <h1 class="pb-2 text-xl font-bold">News and Updates</h1>
       <ul class="space-y-3">
         <li>
+          <h2 class="text-lg font-semibold">June 3rd, 2024</h2>
+          <h3>
+            The match scheduler is now released in beta! Plan and compare times
+            in both timezones to see what time works best. Save the date and
+            time so you can easily check when your match is. Your game time is
+            also easily visible on the matchup page for anyone you share with!
+            Email reminders will also included as an option in the upcoming
+            updates! <br />
+            I will be adding to and fixing the planner in the next few updates.
+            Thank you all for being patient with the planner and letting me know
+            the bugs you are finding!
+          </h3>
+        </li>
+        <li>
           <h2 class="text-lg font-semibold">May 25th, 2024</h2>
           <h3>
             The project is now fully open source! You can explore and access the
