--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -36,13 +36,13 @@
           ></sprite>
         </div>
       </div>
-      <div class="flex" *ngIf="team.menu == 'main'">
+      <div class="flex p-2" *ngIf="team.menu == 'main'">
         <a
-          class="w-2/3 m-2 font-semibold text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          class="flex-grow p-1 font-semibold text-center shadow h-fit bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
           [routerLink]="'/draft/' + team.leagueId"
           >Matches</a
         >
-        <div class="grid items-center justify-center w-1/3 grid-cols-3 px-2">
+        <div class="grid items-center justify-center grid-cols-3 gap-2 px-2">
           <img
             class="w-8 h-8 p-1 shadow rounded-xl hover:cursor-pointer hover:shadow bg-cyan-300 shadow-cyan-600"
             [routerLink]="team.leagueId + '/stats'"
