--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -56,15 +56,18 @@
                 ></sprite>
               </div>
             </div>
-            <div class="flex h-fit" *ngIf="!matchup.deleteConfirm">
+            <div
+              class="flex items-center p-2 h-fit"
+              *ngIf="!matchup.deleteConfirm"
+            >
               <a
-                class="w-2/3 m-2 font-semibold text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl"
+                class="flex-grow p-1 font-semibold text-center bg-red-300 shadow h-fit hover:shadow shadow-red-600 rounded-xl"
                 [routerLink]="'matchup/'"
                 [queryParams]="{ id: matchup._id }"
                 >View Matchup</a
               >
               <div
-                class="grid items-center justify-center w-1/3 grid-cols-4 px-2"
+                class="grid items-center justify-center grid-cols-4 gap-2 px-2"
               >
                 <img
                   class="w-8 h-8 p-1 bg-red-300 shadow hover:shadow rounded-xl hover:cursor-pointer shadow-red-600"
