Planner bug fix 1 and name alliases added

--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -121,10 +121,10 @@
                 [ngClass]="minMaxStyle(i)"
                 formControlName="name"
               />
-              <filter
+              <!-- <filter
                 [query]="teamCtrl.get('name')?.value"
                 (querySelected)="resultSelected(teamCtrl, $event)"
-              ></filter>
+              ></filter> -->
             </div>
             <div class="w-1/4" *ngIf="!isPoints">
               <input
