--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,6 +1,6 @@
 <div
   *ngIf="results.length > 0"
-  class="absolute z-20 w-full mt-1 bg-white border border-gray-300 rounded-md shadow-lg"
+  class="absolute z-20 w-full mt-1 bg-white border border-gray-300 rounded-md shadow-lg max-w-96"
 >
   <div class="overflow-y-auto max-h-48">
     <div
