Fix average cost

--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -138,6 +138,7 @@
             <div class="w-1/4" *ngIf="isPoints">
               <input
                 type="number"
+                placeholder="0"
                 class="w-full p-1 text-center border rounded-lg"
                 [ngClass]="minMaxStyle(i)"
                 formControlName="value"
@@ -261,6 +262,7 @@
                 <input
                   type="number"
                   class="w-full p-1 text-center border rounded-lg"
+                  placeholder="0"
                   [ngClass]="minMaxStyle(i)"
                   formControlName="value"
                 />
